@@ -54,11 +54,6 @@ subtest 'Convenience in_span method' => sub {
 
     is $mocked->call_tracking, [
         {
-            sub_name => 'status',
-            args     => [ D ],
-            sub_ref  => E,
-        },
-        {
             sub_name => 'set_status',
             args     => [ D, SPAN_STATUS_OK ],
             sub_ref  => E,
@@ -100,11 +95,6 @@ subtest 'Convenience in_span method' => sub {
             sub_ref  => E
         },
         {
-            sub_name => 'status',
-            args     => [ D ],
-            sub_ref  => E
-        },
-        {
             sub_name => 'set_status',
             args     => [ D, SPAN_STATUS_ERROR, match qr/^An error/ ],
             sub_ref  => E
@@ -115,41 +105,6 @@ subtest 'Convenience in_span method' => sub {
             sub_ref  => E
         },
     ], 'Span records caught error';
-
-    no_messages {
-        like dies {
-            $tracer->in_span(
-                dead_span => sub ( $span, $context ) {
-                    ($mocked) = mocked $span;
-                    $span->set_status( SPAN_STATUS_ERROR, 'My error' );
-                    die 'An error';
-                },
-            );
-        } => qr/^An error/, 'If sub dies, exception is not caught';
-    };
-
-    is $mocked->call_tracking, [
-        {
-            sub_name => 'set_status',
-            args     => [ D, SPAN_STATUS_ERROR, match qr/^My error/ ],
-            sub_ref  => E
-        },
-        {
-            sub_name => 'record_exception',
-            args     => [ D, match qr/^An error/ ],
-            sub_ref  => E
-        },
-        {
-            sub_name => 'status',
-            args     => [ D ],
-            sub_ref  => E
-        },
-        {
-            sub_name => 'end',
-            args     => [ D ],
-            sub_ref  => E
-        },
-    ], 'Status not set automatically if already set manually';
 };
 
 done_testing;
